--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,11 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      
+      - uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 6.0
+          dotnet-version: '6.x'
+          include-prerelease: false
           
       - name: Restore dependencies
         run: dotnet restore
