--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,5 +37,8 @@ jobs:
         run: dotnet test --no-restore --no-build --configuration Release
         
       - name: Build nuget package
-        if: github.ref == 'refs/heads/master' && github.event_name == 'push'
         run: dotnet pack src/AsyncStateMachine/AsyncStateMachine.csproj --configuration Release
+        
+      - name: Publish nuget package
+        if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+        run: dotnet nuget push src/AsyncStateMachine/AsyncStateMachine\bin\Release\*.nupkg -s nuget.org --api-key ${{ secrets.NUGET_API_KEY }}      
