--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,7 @@
 name: CI for Pull-Requests
 
+env:
+  DOTNET_VERSION: '6.x'
 on:
   push:
     paths:
@@ -17,6 +19,7 @@ on:
 
 jobs:
   build:
+    name: Build and Run UnitTests    
     runs-on: ubuntu-latest
 
     steps:
@@ -24,7 +27,7 @@ jobs:
       
       - uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '6.x'
+          dotnet-version: ${DOTNET_VERSION}
           include-prerelease: false
           
       - name: Restore dependencies
