--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       
       - uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: ${DOTNET_VERSION}
+          dotnet-version: '${DOTNET_VERSION}'
           include-prerelease: false
           
       - name: Restore dependencies
