--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,5 @@
 name: CI for Pull-Requests
 
-env:
-  DOTNET_VERSION: '6.x'
 on:
   push:
     paths:
@@ -27,7 +25,7 @@ jobs:
       
       - uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '${DOTNET_VERSION}'
+          dotnet-version: '6.x'
           include-prerelease: false
           
       - name: Restore dependencies
