--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,4 +42,4 @@ jobs:
         
       - name: Publish nuget package
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: dotnet nuget push src/AsyncStateMachine/AsyncStateMachine\bin\Release\*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
+        run: dotnet nuget push src/AsyncStateMachine/AsyncStateMachine/bin/Release/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
