--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,15 @@
 name: CI for Pull-Requests
 
 on:
-  push:
+  push:    
+    branches: [ dev, main ]
     paths:
       - 'src/**'
       - 'tests/**'
       - 'AsyncStateMachine.sln'
       - '**/ci.yml'
-  pull_request:
+  pull_request:  
+    branches: [ dev, main ]
     paths:
       - 'src/**'
       - 'tests/**'
@@ -39,7 +41,6 @@ jobs:
         
       - name: Build nuget package
         run: dotnet pack src/AsyncStateMachine/AsyncStateMachine.csproj --configuration Release --verbosity normal --output .
-
         
       - name: Publish nuget package
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
