--- a/src/AsyncStateMachine/AsyncStateMachine.csproj
+++ b/src/AsyncStateMachine/AsyncStateMachine.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="NeoSmart.AsyncLock" Version="3.2.0" />
     <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
 
