--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI for Pull-Requests
 
 on:
   push:    
-    branches: [ dev, main ]
+    branches: [ develop, main ]
     paths:
       - 'src/**'
       - 'tests/**'
