--- a/src/AsyncStateMachine/AsyncStateMachine.csproj
+++ b/src/AsyncStateMachine/AsyncStateMachine.csproj
@@ -12,7 +12,7 @@
     <PackageProjectUrl>https://github.com/dschreib42/AsyncStateMachine</PackageProjectUrl>
     <LicenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</LicenseUrl>
     <ProjectUrl>https://github.com/dschreib42/AsyncStateMachine</ProjectUrl>
-    <Copyright>Copyright 2021 Dirk Schreiber</Copyright>
+    <Copyright>Copyright Dirk Schreiber 2021-$([System.DateTime]::Now.ToString(yyyy))</Copyright>
     <Authors>Dirk Schreiber</Authors>
     <Description>A lightweight state machine framework for .Net/.NetCore</Description>
     <VersionPrefix>1.3.2</VersionPrefix>
