--- a/src/AsyncStateMachine/AsyncStateMachine.csproj
+++ b/src/AsyncStateMachine/AsyncStateMachine.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0</TargetFrameworks>
+    <TargetFrameworks>net6.0;net7.0;netstandard2.0</TargetFrameworks>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <RootNamespace>AsyncStateMachine</RootNamespace>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -12,10 +12,10 @@
     <PackageProjectUrl>https://github.com/dschreib42/AsyncStateMachine</PackageProjectUrl>
     <LicenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</LicenseUrl>
     <ProjectUrl>https://github.com/dschreib42/AsyncStateMachine</ProjectUrl>
-    <Copyright>Copyright 2021 Dirk Schreiber</Copyright>
+    <Copyright>Copyright Dirk Schreiber 2021-$([System.DateTime]::Now.ToString(yyyy))</Copyright>
     <Authors>Dirk Schreiber</Authors>
     <Description>A lightweight state machine framework for .Net/.NetCore</Description>
-    <VersionPrefix>1.3.1</VersionPrefix>
+    <VersionPrefix>1.3.2</VersionPrefix>
     <Tags>state machine async</Tags>
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
     <license>http://www.apache.org/licenses/LICENSE-2.0</license>
@@ -34,8 +34,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="NeoSmart.AsyncLock" Version="3.2.0" />
-    <PackageReference Include="System.Reactive" Version="5.0.0" />
+    <PackageReference Include="NeoSmart.AsyncLock" Version="3.2.1" />
+    <PackageReference Include="System.Reactive" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
