--- a/src/AsyncStateMachine/AsyncStateMachine.csproj
+++ b/src/AsyncStateMachine/AsyncStateMachine.csproj
@@ -34,7 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="NeoSmart.AsyncLock" Version="3.2.1" />
+    <PackageReference Include="AsyncKeyedLock" Version="6.3.4" />
     <PackageReference Include="System.Reactive" Version="6.0.0" />
   </ItemGroup>
 
